
AM_CPPFLAGS = @WX_CPPFLAGS@ @EBCONF_PTHREAD_CPPFLAGS@

bin_PROGRAMS = digdic

digdic_LDADD = @WX_LIBS@ @EBCONF_EBLIBS@
digdic_SOURCES = \
	DicBitmaps.cpp \
	DicBitmaps.h \
	DicBook.cpp \
	DicBook.h \
	DicBooks.cpp \
	DicBooks.h \
	DicCandidateHook.cpp \
	DicCandidateHook.h \
	DicCustomTag.cpp \
	DicGroups.cpp \
	DicGroups.h \
	DicHistory.cpp \
	DicHistory.h \
	DicHook.cpp \
	DicHook.h \
	DicHtmlWindow.cpp \
	DicHtmlWindow.h \
	DicHtmlWinParser.cpp \
	DicHtmlWinParser.h \
	DicMainFrame.cpp \
	DicMainFrame.h \
	DicMultiCandidate.cpp \
	DicMultiCandidate.h \
	DicMultiCandidates.cpp \
	DicMultiCandidates.h \
	DicPropertyGrid.cpp \
	DicPropertyGrid.h \
	DicReference.cpp \
	DicReference.h \
	DicReferences.cpp \
	DicReferences.h \
	DicSettingDialog.cpp \
	DicSettingDialog.h \
	DicShare.cpp \
	DicShare.h \
	DicSubbook.cpp \
	DicSubbook.h \
	DicSubbooks.cpp \
	DicSubbooks.h \
	main.cpp
